--- a/.github/workflows/deploy-azure-naming-tool-to-azure-webapps-dotnet-core.yml
+++ b/.github/workflows/deploy-azure-naming-tool-to-azure-webapps-dotnet-core.yml
@@ -21,7 +21,7 @@ name: Azure Naming Tool - Build and deploy to an Azure Web App
 
 env:
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
-  DOTNET_VERSION: '8.0.x'                 # set this to the .NET Core version to use
+  DOTNET_VERSION: '8.0.x'             # set this to the .NET Core version to use
 
 on:
   push:
@@ -37,20 +37,20 @@ permissions:
                 
 jobs:
   check-secrets:
-      runs-on: ubuntu-latest
-      defaults:
-        run:
-          working-directory: src    
-      outputs:
-        secrets-valid: ${{ steps.secrets-valid.outputs.isvalid }}
-      steps:
-        - uses: actions/checkout@v3      
-        - id: secrets-valid
-          env: 
-            azure-webapp-name: ${{ secrets.AZURE_WEBAPP_NAME }}
-            azure-webapp-publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          if: (env.azure-webapp-name != null && env.azure-webapp-publish-profile != null)
-          run: echo 'isvalid=true' >> $GITHUB_OUTPUT
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: src    
+    outputs:
+      secrets-valid: ${{ steps.secrets-valid.outputs.isvalid }}
+    steps:
+      - uses: actions/checkout@v3      
+      - id: secrets-valid
+        env: 
+          azure-webapp-name: ${{ secrets.AZURE_WEBAPP_NAME }}
+          azure-webapp-publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        if: (env.azure-webapp-name != null && env.azure-webapp-publish-profile != null)
+        run: echo 'isvalid=true' >> $GITHUB_OUTPUT
             
   build:
     runs-on: ubuntu-latest
@@ -73,17 +73,18 @@ jobs:
           key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
           restore-keys: |
             ${{ runner.os }}-nuget-
+            
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish -c Release -o ${{ github.workspace }}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ${{ github.workspace }}/myapp
 
   deploy: 
     defaults:
@@ -92,7 +93,7 @@ jobs:
     permissions:
       contents: none
     runs-on: ubuntu-latest
-    needs: [build,check-secrets]
+    needs: [build, check-secrets]
     if: needs.check-secrets.outputs.secrets-valid == 'true'
     environment:
       name: 'Development'
@@ -103,6 +104,7 @@ jobs:
         uses: actions/download-artifact@v4.1.7
         with:
           name: .net-app
+          path: ./downloaded_app  # Explicit download path for consistency
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -110,4 +112,4 @@ jobs:
         with:
           app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+          package: ./downloaded_app  # Set package path to downloaded artifact
